<resources>
    <string name="app_name">Koffeemate</string>

    <!-- Actions -->
    <string name="action_log_an_accident">Log an accident</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_try_again">Try again</string>
    <string name="action_announce_coffee_accident">Inform everyone!</string>
    <string name="action_yes">Yes</string>
    <string name="action_no">No</string>

    <!-- Coffee view -->
    <string name="title_coffeeview_idle">Brewing fresh coffee?</string>
    <string name="message_coffeeview_idle">Touch the coffee pot above!</string>

    <string name="title_coffeeview_brewing">Coffee is coming!</string>
    <string name="message_coffeeview_brewing">Informing others on Slack when ready.</string>

    <!-- Preferences -->
    <string name="preference_category_general">General</string>

    <string name="preference_coffee_brewing_time_key">coffee_brewing_time</string>
    <string name="preference_coffee_brewing_time_title">Coffee brewing time in minutes</string>
    <string name="preference_coffee_brewing_time_summary">How long does your coffee maker take to brew coffee?</string>

    <string name="preference_category_slack_channels">Slack channels</string>

    <string name="preference_coffee_announcement_slack_channel_key">coffee_announcement_slack_channel</string>
    <string name="preference_coffee_announcement_slack_channel_title">Coffee announcement channel</string>
    <string name="preference_coffee_announcement_slack_channel_summary">Slack channel name for announcing when new coffee is ready.</string>

    <string name="preference_use_different_channel_for_accidents_key">use_different_channel_for_accidents</string>
    <string name="preference_use_different_channel_for_accidents_title">Different channel for accidents</string>
    <string name="preference_use_different_channel_for_accidents_summary">Use different channel for posting brewing accidents.</string>

    <string name="preference_coffee_accident_slack_channel_key">coffee_accident_slack_channel</string>
    <string name="preference_coffee_accident_slack_channel_title">Accident announcement channel</string>
    <string name="preference_coffee_accident_slack_channel_summary">Slack channel name for announcing when new coffee brewing accidents happen.</string>

    <string name="preference_category_screensaver">Screensaver settings</string>

    <string name="preference_use_screensaver_key">use_screensaver</string>
    <string name="preference_use_screensaver_title">Use screensaver</string>
    <string name="preference_use_screensaver_summary">Extend your precious screen\'s lifetime and prevent it from getting screen burn-ins.</string>

    <!-- Different time measures for the TimeAgoTextView -->
    <string name="time_just_now">just now</string>

    <string name="time_one_minute_ago">a minute ago</string>
    <string name="time_n_minutes_ago">%d minutes ago</string>

    <string name="time_one_hour_ago">an hour ago</string>
    <string name="time_n_hours_ago">%d hours ago</string>

    <string name="time_one_day_ago">a day ago</string>
    <string name="time_n_days_ago">%d days ago</string>

    <string name="time_one_week_ago">a week ago</string>
    <string name="time_n_weeks_ago">%d weeks ago</string>

    <!-- Progress -->
    <string name="progress_message_shaming_person_on_slack">Shaming person on Slack…</string>

    <!-- Prompts (asking the user to do something) -->
    <string name="prompt_reset_the_counter">Reset the counter?</string>
    <string name="prompt_who_is_guilty">Who failed coffee brewing?</string>
    <string name="prompt_select_person_below">Who is brewing?</string>
    <string name="prompt_select_guilty_person">Select a guilty person</string>

    <string name="prompt_cancel_coffee_progress_title">Cancel Coffee Progress</string>
    <string name="prompt_cancel_coffee_progress_message">Are you sure you want to stop the coffee progress counter?</string>

    <string name="prompt_no_announcement_channel_set">No Slack channel set for coffee announcements. Please set it in the preferences.</string>
    <string name="prompt_no_accident_channel_set">No Slack channel set for brewing failures. Please set it in the preferences.</string>

    <!-- Messages -->
    <string name="message_posting_to_slack_fmt">Posting to Slack that %s didn\'t know how to make coffee.\n\nIs this correct?</string>
    <string name="message_posted_successfully">New MoccaMaster certified person announced successfully on Slack!</string>
    <string name="message_new_coffee_available"><![CDATA[<!here> Freshly brewed coffee available!]]></string>
    <string name="message_congratulations_to_user_fmt">Congratulations to %s for being a certified MoccaMaster user!</string>

    <!-- Informal messages -->
    <string name="info_last_brewed_time">Last brewed:\n%s</string>
    <string name="info_screensaver_on">Screensaver is on. Touch here to stop.</string>

    <!-- Error messages -->
    <string name="error_could_not_post_message">Couldn\'t post to Slack about new MoccaMaster graduate for some reason. :(</string>
    <string name="error_loading_profiles">Couldn\'t load the profile list. :(</string>
    <string name="more">More</string>

</resources>
