<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/preference_category_general">

        <EditTextPreference
            android:key="@string/preference_coffee_announcement_slack_channel_key"
            android:title="@string/preference_coffee_announcement_slack_channel_title"
            android:summary="@string/preference_coffee_announcement_slack_channel_summary"
            android:defaultValue=""
            android:inputType="text"
            android:singleLine="true"/>

        <CheckBoxPreference
            android:key="@string/preference_use_different_channel_for_accidents_key"
            android:title="@string/preference_use_different_channel_for_accidents_title"
            android:summary="@string/preference_use_different_channel_for_accidents_summary"
            android:defaultValue="false" />

        <EditTextPreference
            android:key="@string/preference_coffee_accident_slack_channel_key"
            android:title="@string/preference_coffee_accident_slack_channel_title"
            android:summary="@string/preference_coffee_accident_slack_channel_summary"
            android:defaultValue=""
            android:inputType="text"
            android:singleLine="true"
            android:dependency="@string/preference_use_different_channel_for_accidents_key" />

    </PreferenceCategory>

    <!-- TODO
    <PreferenceCategory
        android:title="@string/preference_category_screensaver">

        <CheckBoxPreference
            android:key="@string/preference_use_screensaver_key"
            android:title="@string/preference_use_screensaver_title"
            android:summary="@string/preference_use_screensaver_summary"
            android:defaultValue="true" />

    </PreferenceCategory>
    -->

</PreferenceScreen>