<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/preference_category_general">

        <EditTextPreference
            android:key="@string/preference_coffee_announcement_slack_channel_key"
            android:title="@string/preference_coffee_announcement_slack_channel_title"
            android:summary="@string/preference_coffee_announcement_slack_channel_summary"
            android:defaultValue=""
            android:inputType="text"
            android:singleLine="true"/>

        <EditTextPreference
            android:key="@string/preference_coffee_accident_slack_channel_key"
            android:title="@string/preference_coffee_accident_slack_channel_title"
            android:summary="@string/preference_coffee_accident_slack_channel_summary"
            android:defaultValue=""
            android:inputType="text"
            android:singleLine="true"/>

    </PreferenceCategory>

</PreferenceScreen>